:recycle: refactor: Refatorando o .env.exxample e adicionando no .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,3 @@
-# ═══════════════════════════════════════════════════════════
-# .gitignore - Arquivos e pastas a ignorar no versionamento
-# ═══════════════════════════════════════════════════════════
-
-# ─── VARIÁVEIS DE AMBIENTE ─── 
 .env
-.env.local
-.env.*.local
-
-# ─── DEPENDÊNCIAS ───
-node_modules/
 package-lock.json
-yarn.lock
-
-# ─── IDE E EDITORES ───
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-Thumbs.db
-*.sublime-project
-*.sublime-workspace
-
-# ─── LOGS ───
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# ─── BUILD E DIST ───
-dist/
-build/
-out/
-*.min.js
-*.min.css
-
-# ─── TESTES ───
-coverage/
-.nyc_output/
-
-# ─── SISTEMA ───
-.DS_Store
-.AppleDouble
-.LSOverride
-*.pem
-*.key
+/node_modules
